--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,3 +3,5 @@
 
 <!-- Resto del contenido de la aplicación -->
 <router-outlet></router-outlet>
+
+<app-footer></app-footer> <!-- Incluye el Footer aquí -->
