--- a/src/app/components/edit-meta/edit-meta.component.html
+++ b/src/app/components/edit-meta/edit-meta.component.html
@@ -13,7 +13,7 @@
       </div>
       <div class="form-group">
         <label for="inicial" class="form-label">Monto actual</label>
-        <input id="inicial" formControlName="monto_actual" type="number" placeholder="$0.00" class="form-input" [disabled]="!isEditable" />
+        <input id="inicial" formControlName="monto_actual" type="number" placeholder="$0.00" class="form-input" [disabled]="true" />
       </div>
       <div class="form-group">
         <label for="fecha_finalizacion" class="form-label">Fecha de finalización</label>
