--- a/src/app/components/modal-abono/modal-abono.component.html
+++ b/src/app/components/modal-abono/modal-abono.component.html
@@ -11,10 +11,9 @@
 
     <!-- Cuerpo del modal -->
     <div class="modal-body">
-      <!-- Lista de abonos recientes -->
       <ul class="recent-abonos">
         <li *ngFor="let abono of abonosRecientes">
-          {{ abono.fecha }}: <strong>${{ abono.monto }}</strong>
+          {{ abono.fecha | date: 'dd/MM/yyyy' }}: <strong>${{ abono.monto }}</strong>
         </li>
       </ul>
 
