--- a/src/app/pages/perfil-usuario/perfil-usuario.component.css
+++ b/src/app/pages/perfil-usuario/perfil-usuario.component.css
@@ -67,6 +67,17 @@
   gap: 5px;
 }
 
+.profile-item span {
+  display: inline;
+}
+
+.profile-item p {
+  display: inline;
+  margin: 0;
+  font-size: 1.2em;
+}
+
+
 .profile-item label {
   font-weight: bold;
   color: #2b1d6f;
@@ -77,4 +88,59 @@
   font-size: 1em;
   color: #444444;
   line-height: 1.5;
+}
+
+
+/* Estilos generales para los botones */
+button {
+  padding: 10px 20px;
+  border-radius: 8px;
+  font-size: 16px;
+  font-weight: bold;
+  border: none;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  margin-right: 10px; /* Espacio entre botones */
+}
+
+button:hover {
+  opacity: 0.8; /* Efecto al pasar el mouse */
+}
+
+/* Estilo específico para el botón de "Editar perfil" */
+.btn-edit {
+  background-color: #4CAF50; /* Verde */
+  color: white;
+}
+
+.btn-edit:hover {
+  background-color: #45a049; /* Color más oscuro para hover */
+}
+
+/* Estilo específico para el botón de "Guardar Cambios" */
+.btn-save {
+  background-color: #008CBA; /* Azul */
+  color: white;
+}
+
+.btn-save:hover {
+  background-color: #007bb5; /* Color más oscuro para hover */
+}
+
+/* Estilo específico para el botón de "Cancelar" */
+.btn-cancel {
+  background-color: #f44336; /* Rojo */
+  color: white;
+}
+
+.btn-cancel:hover {
+  background-color: #e53935; /* Color más oscuro para hover */
+}
+
+/* Alinear los botones horizontalmente */
+.button-container {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start; /* Alinea a la izquierda */
+  gap: 10px; /* Espacio entre botones */
 }
