--- a/src/app/shared/special-button/special-button.component.html
+++ b/src/app/shared/special-button/special-button.component.html
@@ -1,1 +1,1 @@
-<button class="button" (click)="onClick()">{{ label }}</button>
+<button class="button" [disabled]="disabled" (click)="onClick()">{{ label }}</button>
