--- a/src/app/shared/grafica-gasto/grafica-gasto.component.html
+++ b/src/app/shared/grafica-gasto/grafica-gasto.component.html
@@ -1,7 +1,7 @@
 <div class="grafica-contenedor">
   <nz-progress
     [nzType]="'circle'"
-    [nzPercent]="porcentaje"
+    [nzPercent]="porcentaje.toFixed(2)"
     [nzWidth]="150"
     [nzStrokeColor]="strokeColor"
     [nzFormat]="formatoPorcentaje"
