--- a/src/app/shared/grafica-progreso/grafica-progreso.component.html
+++ b/src/app/shared/grafica-progreso/grafica-progreso.component.html
@@ -1,6 +1,6 @@
 <nz-progress
   [nzType]="'circle'"
-  [nzPercent]="progreso"
+  [nzPercent]="progreso.toFixed(2)"
   [nzWidth]="120"
   [nzStrokeColor]="'#7767df'">
 </nz-progress>
