--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -2,7 +2,7 @@
 <footer class="footer">
   <div class="footer-container">
     <div class="footer-logo">
-      <h3>FinanzasApp</h3>
+      <h3>WalleWatch</h3>
       <p>Tu herramienta para el control financiero</p>
     </div>
 
@@ -23,6 +23,6 @@
   </div>
 
   <div class="footer-bottom">
-    <p>&copy; 2024 FinanzasApp. Todos los derechos reservados.</p>
+    <p>&copy; 2024 WalleWatch. Todos los derechos reservados.</p>
   </div>
 </footer>
